Bug in locking code when UseOptoBiasInlining is disabled: assert(dmw->is_neutral()) failed: invariant

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 9
    • Affects Version/s: 8u40, 9
    • Component/s: hotspot
    • b42
    • x86
    • Verified

        MacroAssembler::fast_lock uses biased_locking_enter with swap_reg_contains_mark==true, which is no longer correct after biased_locking_enter was put in front of check for IsInflated.
        This happened in 8033805: Move Fast_Lock Fast_Unlock code from .ad files to macroassembler.

              Assignee:
              Martin Doerr
              Reporter:
              Goetz Lindenmaier
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: